bugfix: when upgrading and the limit was nil, errors would occur. The negative class also wasn't having much effect and the light grey number were hardly visible

--- a/public/stylesheets/money.css
+++ b/public/stylesheets/money.css
@@ -266,10 +266,6 @@ td.number, th.number {
   white-space: nowrap;
 }
 
-td.current_balance, th.current_balance {
-  color: #999;
-}
-
 span.real_balance {
   font-size: 80%;
   color: #999;
@@ -281,7 +277,7 @@ span.check {
 }
 
 .negative {
-  color: red;
+  color: red !important;
 }
 
 .critical {
